--- a/app/src/main/res/layout/activity_initial_login.xml
+++ b/app/src/main/res/layout/activity_initial_login.xml
@@ -47,7 +47,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="#A1ACD3"
+        app:strokeColor="#97A7E1"
         app:strokeWidth="5dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
