--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#BCBCBC</color>
+    <color name="light_blue">#8395F1</color>
+    <color name="light_orange">#D19B86</color>
+    <color name="dark_grey">#616161</color>
 </resources>
