--- a/app/src/main/res/layout/res_row.xml
+++ b/app/src/main/res/layout/res_row.xml
@@ -2,28 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/mainLayout">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="345dp" >
+        android:layout_marginTop="12dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="12dp">
+            android:padding="2dp">
+
 
             <TextView
                 android:id="@+id/candidate_id_txt"
                 android:layout_width="0dp"
                 android:layout_height="37dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="6dp"
                 android:text="1"
                 android:textColor="@color/black"
                 android:textSize="25sp"
@@ -65,21 +65,21 @@
                 android:id="@+id/candidate_skills_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="25dp"
                 android:text="Skills 1"
                 android:textColor="@color/light_blue"
-                app:layout_constraintStart_toEndOf="@+id/candidate_position_txt"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/candidate_name_txt" />
 
             <TextView
                 android:id="@+id/candidate_date_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="200dp"
+                android:layout_marginEnd="25dp"
                 android:text="Date 1"
                 android:textColor="@color/teal_700"
-                app:layout_constraintStart_toEndOf="@+id/candidate_name_txt"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/candidate_name_txt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
