--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -61,6 +61,10 @@
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:hint="Date"
         android:inputType="date|datetime"
         app:layout_constraintEnd_toEndOf="parent"
