--- a/app/src/main/res/layout/activity_add_candidate.xml
+++ b/app/src/main/res/layout/activity_add_candidate.xml
@@ -77,6 +77,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
         android:text="Add"
+        android:enabled="false"
         android:textSize="18sp"
         android:background="@color/light_gray"
         android:textAllCaps="false"
@@ -93,4 +94,6 @@
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
