--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -77,6 +77,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
         android:text="Update"
+        android:enabled="false"
         android:textSize="18sp"
         android:background="@color/light_gray"
         android:textAllCaps="false"
@@ -98,14 +99,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/update_btn" />
 
-
-    <!--    <Button-->
-<!--        android:id="@+id/back_list_btn2"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:text="Back To List"-->
-<!--        android:textAllCaps="false"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/editTextName2"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
