--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -38,11 +38,12 @@
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Password"
-        android:inputType="text"
+        android:hint="@string/password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner1"
+        tools:ignore="Autofill,TextContrastCheck"/>
 
     <EditText
         android:id="@+id/editTextRetype"
@@ -51,10 +52,11 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Retype password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
+        tools:ignore="Autofill,TextContrastCheck"/>
 
 
     <Button
